# agent-sandbox-playground

./: .pre-commit-config.yaml  README.md  docker-bake.hcl
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: build.yaml
setup/: 01-setup.sh  README.md  python-sandbox-template.yaml  sandbox-template.yaml  setup.sh
setup/sandbox-router/: gateway.yaml  sandbox_router.py  sandbox_router.yaml  test_sandbox_router.py
setup/sandbox-template/: Dockerfile  README.md  main.py  requirements.in  requirements.txt  run-test-docker.sh  run-test-kind.sh  sandbox-python-kind.yaml  tester.py
workload/: pyproject.toml
workload/src/workload/: test_client.py
workloads/go/: go.mod  go.sum  main.go
workloads/python/: pyproject.toml
