[project]
name = "workload"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Karn Wong", email = "karn@karnwong.me" }
]
requires-python = ">=3.14"
dependencies = [
    "k8s-agent-sandbox>=0.4.2",
]

[project.scripts]
main = "workload.main:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
# [tool.uv.build-backend]
# module-root = "api"

# [tool.uv]
# package = false
